fix: catch invalid or empty dates in BestOfTumorCsv, fixes #665